--- a/0-0.0.3 HW (guessing game).html.html
+++ b/0-0.0.3 HW (guessing game).html.html
@@ -8,7 +8,7 @@
  var userAnswer= prompt("Это маленькая птичка. Как зовут её?").toLowerCase() 
  if(userAnswer == "Синичка")
  quest++;
- //alert("Поздравляю, вы угадали!");  
+ alert("Поздравляю, вы угадали!");  
     
  var userAnswer= prompt("Кто один имеет рог? Отгадайте!").toLowerCase() 
  if(userAnswer == "Носорог")
