--- a/cite/index.html
+++ b/cite/index.html
@@ -10,8 +10,8 @@
        <div class="content">
         <div class="header">
             <a href="#">Главная страница</a>
-            <a href="puzzle.html.html">Загадки</a>
-            <a href="#">Угадайка</a>
+            <a href="puzzle.html">Загадки</a>
+            <a href="guess.html">Угадайка</a>
         </div>
         
         <h1>SoftWalls "TiTo" - Мягкие панели</h1>
@@ -28,7 +28,7 @@
             <p>На этом сайте вы сможете выбрать визуальный дизайн вашего интерьера, увидеть примеры и сделать заказ, который мы будем рады выполнить. Наша галерея выполненных работ: <a href="https://github.com/Katerine-Arch"> Получить вдохновение</a></p>
 
                 <p>Ссылки моего он-лайн обучения: <a href="#">Главная страница</a>
-                <a href="#">Загадки</a>         <a href="#">Угадайка</a></p>
+                <a href="puzzle.html">Загадки</a>         <a href="guess.html">Угадайка</a></p>
 
             </div>
         </div>
