--- a/cite/puzzle.html
+++ b/cite/puzzle.html
@@ -34,8 +34,8 @@
     <div class="content">
         <div class="header">
             <a href="index.html">Главная страница</a>
-            <a href="#">Загадки</a>
-            <a href="#">Угадайка</a>
+            <a href="puzzle.html">Загадки</a>
+            <a href="guess.html">Угадайка</a>
         </div>
         
         <div class-"contentWrap">
